[gd_scene load_steps=6 format=3 uid="uid://cal4x5wbe2maf"]

[ext_resource type="Script" path="res://ui/in-game/boss_ui.gd" id="1_8kv4s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_13r8g"]
bg_color = Color(0.374, 0.374, 0.374, 0.459)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sn4tq"]
bg_color = Color(0.734454, 0.0355653, 0.0197325, 1)

[sub_resource type="LabelSettings" id="LabelSettings_meu1g"]
line_spacing = 0.0
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_ehqj0"]
font_size = 20

[node name="BossUi" type="CanvasLayer"]
script = ExtResource("1_8kv4s")

[node name="BossLife" type="ProgressBar" parent="."]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -478.0
offset_top = -102.0
offset_right = 480.0
offset_bottom = -95.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_13r8g")
theme_override_styles/fill = SubResource("StyleBoxFlat_sn4tq")
value = 70.0
show_percentage = false

[node name="BossLifeLabel" type="Label" parent="BossLife"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -77.0
offset_top = -36.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "123/456"
label_settings = SubResource("LabelSettings_meu1g")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BossNameLabel" type="Label" parent="BossLife"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -39.0
offset_right = 128.0
offset_bottom = -11.0
grow_vertical = 0
text = "Nom du boss"
label_settings = SubResource("LabelSettings_ehqj0")
